--- a/Testing.Tools/Testing.Tools.csproj
+++ b/Testing.Tools/Testing.Tools.csproj
@@ -56,7 +56,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ArrangeActAssert.cs" />
+    <Compile Include="GivenA.cs" />
     <Compile Include="ExampleTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
